--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@hookform/resolvers": "^4.1.2",
+    "@react-navigation/drawer": "^7.1.2",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.37",
     "expo-font": "~13.0.4",
@@ -30,6 +31,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-recaptcha-that-works": "^2.0.0",
     "react-native-safe-area-context": "4.12.0",
