--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-EXPO_PUBLIC_API_URL=http://localhost:5213/
+EXPO_PUBLIC_API_URL=https://cloudbuplat.com/FINEFIS_API/
 EXPO_PUBLIC_DEV_API_URL=http://localhost:5213/
+# EXPO_PUBLIC_DEV_API_URL=https://cloudbuplat.com/FINEFIS_API/
