--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-paper": "^5.13.1",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-reanimated": "~3.16.1",
     "react-native-recaptcha-that-works": "^2.0.0",
     "react-native-safe-area-context": "4.12.0",
